# oo-docs

./: README-PYPI.md  README.md  codex.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference-scope.md  migration-v1.3.md  migration-v2.md  usage-guide-scope.md
docs/development/: api-coverage.md  generic-feature-acceptance.md  testing.md
docs/guide/: api-object-model.md
docs/how-to/: build-api-summary-table.md  check-docstring-coverage.md  compare-api-snapshots.md  compose-api-objects.md  create-custom-styles.md  insert-api-sections.md
docs/reference/: apidoc-cli.md  apidoc-collectors.md  apidoc-docstring-styles.md  apidoc-model.md  apidoc-presentation-profiles.md  apidoc-profiles.md  apidoc.md  application-boundary.md  chemistry-support.md  citation-support.md  cli-documentation.md  cover-page.md  description-list.md  document-matter.md  document-suite.md  equation-numbering.md  evidence-report.md  footnote-support.md  glossary-support.md  header-footer-support.md  hyperref-support.md  integrations.md  list-support.md  locale-support.md  math-support.md  page-overlay-support.md  public-api-policy.md  quantity-formatting.md  reference-support.md  references-and-links.md  review-annotation-support.md  schema-documentation.md  style-system.md  table-media-support.md  template-preset-support.md
examples/api_objects_example/: README.md  main.py
examples/cli_manual_example/: README.md  main.py  sample_cli.py
examples/config_reference_example/: README.md  main.py  sample_config.toml  sample_schema.json
examples/conformance_matrix_report/: README.md  main.py
examples/conformance_matrix_report/data/: conformance-results.csv
examples/document_suite_example/: README.md  main.py
examples/engineering_report_example/: README.md  main.py
examples/journal_paper_example/: README.md  main.py
examples/native_benchmark_report/: README.md  main.py
examples/page_overlay_example/: README.md  main.py
examples/project_metadata_report/: README.md  main.py
examples/release_notes_digest/: README.md  main.py
examples/review_notes_example/: README.md  main.py
examples/style_cleanup_smoke/: README.md  main.py
examples/template_presets/: README.md  build_all.py  journal_article_template.py  main.py
examples/usage_guide_example/: README.md  main.py
examples/validation_gate_report/: README.md  main.py
release-notes/: v0.9.0.md  v1.0.0.md  v1.0.4.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v2.0.0.md
scripts/: release.ps1
src/docscriptor/: __init__.py  compatibility.py  document.py  validation.py
src/docscriptor/components/: markup.py
src/docscriptor/importers/: __init__.py  markdown.py  notebook.py
src/docscriptor/renderers/: docx.py  html.py  pdf.py
src/oodocs/: __init__.py  _paths.py  chem.py  chemistry.py  cli.py  compatibility.py  core.py  document.py  engineering.py  equations.py  evidence.py  generated.py  glossary.py  media.py  metadata.py  pdf.py  positioning.py  public_api.py  references.py  review.py  settings.py  structure.py  suite.py  validation.py  workflows.py
src/oodocs/adapters/: __init__.py  _paths.py  evidence.py  github_actions.py  manifest.py  pyproject.py  tabular.py
src/oodocs/apidoc/: __init__.py  blocks.py  builtin_categories.py  categories.py  cli.py  collect.py  collect_griffe.py  collect_inspect.py  config.py  coverage.py  diff.py  docstring.py  examples.py  help.py  model.py  paths.py  profiles.py  render.py  styles.py
src/oodocs/clidoc/: __init__.py  model.py  render.py
src/oodocs/components/: __init__.py  base.py  blocks.py  chemistry.py  cover.py  descriptions.py  equations.py  generated.py  glossary.py  inline.py  markup.py  matter.py  media.py  people.py  positioning.py  references.py
src/oodocs/engineering/: __init__.py  quantity.py
src/oodocs/evidence/: __init__.py  __main__.py  cli.py  model.py  render.py
src/oodocs/importers/: __init__.py  markdown.py  notebook.py  results.py
src/oodocs/integrations/: __init__.py  argparse.py  bibtex.py  github_actions.py  json_schema.py  pint.py  pydantic.py  pyproject.py  python.py  sympy.py
src/oodocs/layout/: __init__.py  indexing.py  matter.py  theme.py
src/oodocs/presets/: __init__.py  components.py  templates.py
src/oodocs/renderers/: context.py  docx.py  html.py  pdf.py  syntax.py
tests/: __init__.py  apidoc_samples.py  example_regression.py  test_adapters.py  test_apidoc.py  test_apidoc_cli.py  test_apidoc_collect_griffe.py  test_apidoc_collect_inspect.py  test_apidoc_config.py  test_apidoc_coverage.py  test_apidoc_diff.py  test_apidoc_docstring_auto.py  test_apidoc_docstring_google.py  test_apidoc_docstring_markdown_style.py  test_apidoc_docstring_numpy.py  test_apidoc_docstring_plain.py  test_apidoc_docstring_sphinx.py  test_apidoc_general_repo.py  test_apidoc_help_layout.py  test_apidoc_help_no_user_guide_overlap.py  test_apidoc_model.py  test_apidoc_profiles.py  test_apidoc_query.py  test_apidoc_render_profile_compact.py  test_apidoc_render_profile_evidence.py  test_apidoc_render_profile_manual.py  test_apidoc_render_profile_reference.py  test_apidoc_render_profile_review.py  test_apidoc_render_profile_website.py  test_apidoc_self.py  test_apidoc_styles.py  test_apidoc_to_blocks.py  test_apidoc_to_section.py  test_apidoc_to_tables.py  test_bibtex_integration.py  test_builder_api.py  test_cleanup_completion_criteria.py  test_cli.py  test_cli_manual_example.py  test_config_reference_example.py  (+33 more)
tests/clidoc/: test_argparse_integration.py  test_model.py
tests/contracts/: project-specific-string-allowlist.toml  test_application_boundary.py  test_integration_boundaries.py  test_no_project_specific_api.py  test_public_api_contract.py  test_renderer_semantics.py
tests/core/: __init__.py  test_metadata_models.py
tests/engineering/: test_quantity.py  test_quantity_renderers.py
tests/evidence/: __init__.py  test_evidence_report.py
tests/integrations/: test_engineering_integrations.py  test_schema_integrations.py
tests/schema/: test_schema_models.py
tests/snapshots/: public-api-inventory.json
tools/: api_surface_inventory.py
(+29 files in other folders)
