[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docscriptor"
dynamic = ["version"]
description = "Python-first document authoring toolkit for generating DOCX, PDF, and HTML outputs from the same source."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "docscriptor contributors" }
]
keywords = ["document generation", "pdf", "docx", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Text Processing",
]
dependencies = [
  "Pillow>=10.0.0",
  "Pygments>=2.18.0",
  "python-docx>=1.2.0",
  "reportlab>=4.2.5",
]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
]
dev = [
  "build>=1.2.1",
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
  "pypdf>=5.4.0",
  "pytest>=8.0.0",
  "setuptools-scm>=8.0.1",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/Gonie-Gonie/docscriptor"
Repository = "https://github.com/Gonie-Gonie/docscriptor"
Documentation = "https://github.com/Gonie-Gonie/docscriptor#readme"
Issues = "https://github.com/Gonie-Gonie/docscriptor/issues"

[project.scripts]
docscriptor = "docscriptor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["docscriptor*"]

[tool.setuptools_scm]
fallback_version = "1.0.0"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.pytest.ini_options]
testpaths = ["tests"]
