[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oodocs"
dynamic = ["version"]
description = "Object-oriented documentation toolkit for authoring DOCX, PDF, and HTML documents from Python object trees."
readme = "README-PYPI.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "OODocs contributors" }
]
keywords = ["object-oriented documentation", "document generation", "pdf", "docx", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Text Processing",
]
dependencies = [
  "Pillow>=10.0.0",
  "Pygments>=2.18.0",
  "pypdf>=5.4.0",
  "python-docx>=1.2.0",
  "reportlab>=4.2.5",
]

[project.optional-dependencies]
apidoc = [
  "griffe>=1.0",
  "docstring-parser>=0.16",
]
adapters = [
  "PyYAML>=6.0.0",
]
examples = [
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
]
dev = [
  "build>=1.2.1",
  "docstring-parser>=0.16",
  "griffe>=1.0",
  "PyYAML>=6.0.0",
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
  "pytest>=8.0.0",
  "setuptools-scm>=8.0.1",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/Gonie-Gonie/oo-docs"
Repository = "https://github.com/Gonie-Gonie/oo-docs"
Documentation = "https://github.com/Gonie-Gonie/oo-docs#readme"
Issues = "https://github.com/Gonie-Gonie/oo-docs/issues"

[project.scripts]
oodocs = "oodocs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["oodocs*"]

[tool.setuptools_scm]
fallback_version = "1.1.0"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.oodocs.apidoc]
collector = "griffe"
public-policy = "__all__"
docstring-style = "auto"
module-exclude-patterns = ["oodocs.public_api"]
object-exclude-patterns = [
    "render_to_docx",
    "render_to_pdf",
    "render_to_html",
    "*.savefig",
    "*.OODocs_API_CATEGORIES",
    "oodocs.presets.BookTemplate",
    "oodocs.presets.CalloutBox",
    "oodocs.presets.CompactTable",
    "oodocs.presets.CoverPagePreset",
    "oodocs.presets.info_box",
    "oodocs.presets.JournalArticleTemplate",
    "oodocs.presets.KeyValueTable",
    "oodocs.presets.ManuscriptSection",
    "oodocs.presets.Nomenclature",
    "oodocs.presets.note_box",
    "oodocs.presets.option_table",
    "oodocs.presets.SoftwareManualTemplate",
    "oodocs.presets.success_box",
    "oodocs.presets.TechnicalReportTemplate",
    "oodocs.presets.warning_box",
]
presentation = "help"
output-formats = ["docx", "pdf", "html"]
output-dir = "artifacts/api"
stem = "oodocs-api"
sidecars = true
